--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="fragmentColor">#FFFFFF</color>
+    <color name="general_color">#006064</color>
+    <color name="grey">#817474</color>
 </resources>
