--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -71,6 +71,19 @@
                 android:textColor="#FFFFFF"
                 app:cornerRadius="10dp"
                 app:iconTintMode="add" />
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                app:fabSize="normal"
+                android:clickable="true"
+                android:focusable="true"
+                android:tint="@color/white"
+                android:layout_marginBottom="32dp"
+                android:layout_marginEnd="32dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.core.widget.NestedScrollView>
